<resources>
    <string name="app_name">my project</string>
    <string name="lion_fischer">Lion Fischer</string>
    <string name="lionfiscer_gmail_com">lionfiscer@gmail.com</string>
    <string name="my_reviews">My Reviews</string>
    <string name="account_settings">Account Settings</string>
    <string name="personal_information">Personal Information</string>
    <string name="notification">Notification</string>
    <string name="fingerprint_settings">Fingerprint Settings</string>
    <string name="back_to_main_page">Back to Main page</string>

</resources>