<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/top_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mtop"
                android:src="@drawable/top_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="@+id/top_background"
                app:layout_constraintEnd_toEndOf="@+id/top_background"
                app:layout_constraintStart_toStartOf="@+id/top_background"
                app:layout_constraintTop_toBottomOf="@+id/top_background" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/name"
                android:text="@string/lion_fischer"
                android:textSize="@dimen/padding"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lionfiscer_gmail_com"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/_5"
                    android:background="@drawable/stylebtn1"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="@dimen/padding"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/my_reviews"
                    android:textAllCaps="false" />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/margintop"
                    android:background="@drawable/stylebtn1"
                    android:drawableStart="@drawable/ic_2"
                    android:drawablePadding="@dimen/padding"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/account_settings"
                    android:textAllCaps="false" />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/margintop"
                    android:background="@drawable/stylebtn1"
                    android:drawableStart="@drawable/ic_3"
                    android:drawablePadding="@dimen/padding"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/personal_information"
                    android:textAllCaps="false" />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/margintop"
                    android:background="@drawable/stylebtn1"
                    android:drawableStart="@drawable/ic_4"
                    android:drawablePadding="@dimen/padding"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/notification"
                    android:textAllCaps="false" />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/margintop"
                    android:background="@drawable/stylebtn1"
                    android:drawableStart="@drawable/ic_5"
                    android:drawablePadding="@dimen/padding"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/fingerprint_settings"
                    android:textAllCaps="false" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/back_to_main_page"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginTop="@dimen/margintop"
                    android:layout_marginEnd="@dimen/margin"
                    android:background="@drawable/stylebtn2"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>